@@ -91,6 +91,7 @@ You can find links to these tutorials and other documentation files below.
 <br><hr><br><font size=+1><b>Full Index</b></font><ul>
 <!--FULLINDEX-->
 <a href=ref/CD.html#eject>CD.eject</a> - ejects cdrom drive<br>
+<a href=ref/CD.html#get_all>CD.get_all</a> - get all track information for the cd<br>
 <a href=ref/CD.html#get_busy>CD.get_busy</a> - checks if the cd is currently playing<br>
 <a href=ref/CD.html#get_current>CD.get_current</a> - get current position of the cdrom<br>
 <a href=ref/CD.html#get_empty>CD.get_empty</a> - checks for a cd in the drive<br>
